WorkInProgress/Codeforces - Codeforces Round #140 (Div. 2)/C. Flying Saucer Segments/attic/stderr
[1m/Users/lsantel/Competitive-Programming/solutions/Codeforces - Codeforces Round #140 (Div. 2)/C. Flying Saucer Segments/sol.cpp:167:2: [0m[0;1;31merror: [0m[1mexpected unqualified-id[0m
}`
[0;1;32m ^
[0m1 error generated.
